--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@zeit/git-hooks",
-  "version": "0.1.4",
+  "name": "@RayOei/git-hooks",
+  "version": "0.1.5",
   "description": "No nonsens Git hook management",
-  "repository": "zeit/git-hooks",
+  "repository": "RayOei/git-hooks",
   "author": "Josh Junon <junon@zeit.co>",
   "license": "MIT",
   "main": "null.js",
